--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,9 @@
 name: Golang Docker Build
 
-on: # LET THE PIPELINE TRIGGER ON A PUSH TO ALL BRANCHES
+on: push
 
 env:
-  CONTAINER_REPOSITORY: quay.io/mortierdaan # PUT YOUR OWN USERNAME HERE
+  CONTAINER_REPOSITORY: quay.io/alexandercalle
   CONTAINER_IMAGE: alm-workshop
   GOLANG_VERSION: 1.23
 
@@ -18,14 +18,14 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: quay.io
-          username: <<TODO>>
-          password: <<TODO>>
+          username: alexandercalle+almworkshop
+          password: VNVUGRKQ3B9HMXTTV2JHMJ9Y2PTQPVZA74OL5XPUIGH4QOXX6N19KM97SV7KRFU3
 
       - name: Extract metadata (tags, labels) for Docker
         uses: docker/metadata-action@v4
         id: meta
         with:
-          images: <<TODO>>
+          images: quay.io/alexandercalle/alm-workshop
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
