--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,8 @@
 name: Golang Docker Build
 # Push for every push
-on: push
-
+on:
+  release:
+    types: [published]
 env:
   CONTAINER_REPOSITORY: quay.io/alexandercalle
   CONTAINER_IMAGE: alm-workshop
