--- a/infra/openshift.yaml
+++ b/infra/openshift.yaml
@@ -8,8 +8,7 @@ metadata:
   labels:
     app: dev-alm-workshop-2025-app
 spec:
-  ## TODO: Update replica amount
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       # Indicates to which pods the Deployment controller should bind
@@ -23,8 +22,7 @@ spec:
     spec:
       containers:
         - name: workshop
-          # TODO: Update image to your image
-          image: <<TODO>>
+          image: quay.io/alexandercalle/alm-workshop:1.0.0
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
