--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,12 @@
 name: Golang Docker Build
 # Push for every push
 on:
+  push:
+    branches:
+      - "**"
   release:
-    types: [published]
+    types:
+      - published
 env:
   CONTAINER_REPOSITORY: quay.io/alexandercalle
   CONTAINER_IMAGE: alm-workshop
